fix(mapper): incorrect styling for buttons, backround color, spacing (#2460)
* Fix button backround color, spacing

* + Dynamic color for map, change naming for entity statuses

--- a/src/mapper/src/styles/map.css
+++ b/src/mapper/src/styles/map.css
@@ -16,7 +16,7 @@
 }
 
 .map .control .sync-button {
-	--at-apply: text-[1.25rem] rotate-90 text-primary-600;
+	--at-apply: text-[1.25rem] rotate-90 text-primary-600 bg-white;
 }
 
 .map .control .basemap-icon {
